# fui

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_3rdparty.md  vcpkg  vulkansdk
cmake/: CodeAnalysis.cmake  CompilerFlags.cmake  File2c.cmake  FindFontconfig.cmake  FindStb.cmake  GLSL2SPIRV.cmake
empkg/: CMakeLists.txt  empkg.cmake
empkg/ports/glm/: CMakeLists.txt
examples/: CMakeLists.txt  FontDescriptor.h  example.cpp  loadFontSample.cpp  perf.c  webSample.cpp  widgetSample.cpp
examples/GL/: GLPrimitive.c  GLPrimitive.h  GLProgram.h
examples/assets/shaders/: sample.frag  sample.vert
examples/fonts_loading/: CMakeLists.txt  loadFontSample.cpp
examples/nanovg/: CMakeLists.txt  demo.c  example.cpp  perf.c  perf.h
examples/opengl_sample/: CMakeLists.txt  main.cpp
examples/opengl_sample/GL/: GLPrimitive.c  GLPrimitive.h  GLProgram.c
examples/vulkan_sample/: CMakeLists.txt  main.cpp
examples/vulkan_sample/shaders/: triangle.vert
include/: fui.hpp
include/GL/: GL3Context.hpp  GlfwRenderWindow.hpp  OpenGLContext.hpp  glad.h  header.h
include/core/: AbstractWindowManager.hpp  ApplicationContext.hpp  Cursor.hpp  EventMacro.hpp  EventWindow.hpp  GlfwWindowManager.hpp  GraphicsProfile.hpp  Log.hpp  MathDef.hpp  PerfGraph.hpp  RenderContext.hpp  RenderWindow.hpp  Signal.hpp  Singleton.hpp  Status.hpp  Stopwatch.hpp  Tooltip.hpp
include/event/: EventEnum.hpp  FocusEvent.hpp  MouseEvent.hpp
include/glfw/: GlfwWindowManager.hpp
include/text/: EntypoIconDef.h  FontDescriptor.hpp
include/vulkan/: VulkanContext.hpp
include/widget/: Button.hpp  Canvas.hpp  GLCanvas.hpp  Label.hpp  PictureBox.hpp  ProgressBar.hpp  Slider.hpp  Widget.hpp  WidgetContainer.hpp  WidgetMacro.hpp  WidgetStyle.hpp  Window.hpp
src/GL/: GL3Context.cpp  GL3Context.hpp  GLES2Context.cpp  GLES2Context.hpp  GLES3Context.cpp  GLES3Context.hpp  GlfwGL3Profile.cpp  GlfwGL3Profile.hpp  GlfwGLES2Profile.cpp  GlfwGLES2Profile.hpp  GlfwRenderWindow.cpp  GlfwRenderWindow.hpp  OpenGLContext.cpp  glad.c  nanovg_gl.h
src/core/: ApplicationContext.cpp  GlfwCursor.cpp  GlfwCursor.hpp  GlfwRenderWindow.cpp  GlfwRenderWindow.hpp  GlfwWindowManager.cpp  Log.cpp  PerfGraph.cpp  RenderContext.cpp  RenderWindow.cpp  Tooltip.cpp
src/glfw/: GlfwCursor.cpp  GlfwGL3Profile.cpp  GlfwGLES2Profile.cpp  GlfwRenderWindow.cpp  GlfwRenderWindow.hpp  GlfwVulkanProfile.cpp  GlfwVulkanProfile.hpp  GlfwWindowManager.cpp
src/image/: jpg_decompress.c  jpg_decompress.h  mjpeg2jpeg.c  mjpeg2jpeg.h
src/nanovg/: nanovg.c  nanovg.h
src/text/: FontDescriptor.cpp  FontManagerEmscripten.cc  FontManagerLinux.cc  FontManagerMac.mm  FontManagerWindows.cc  fontstash.h
src/vulkan/: CMakeLists.txt  GlfwVulkanProfile.cpp  GlfwVulkanProfile.hpp  VulkanContext.cpp  VulkanContext.hpp  debug.hpp  nanovg_vk.h  vku.c  vku.cpp  vku.h  vku.hpp
src/vulkan/shaders/: fill.frag  fill_edge_aa.frag
src/widget/: Button.cpp  Canvas.cpp  GLCanvas.cpp  Label.cpp  PictureBox.cpp  ProgressBar.cpp  Slider.cpp  Widget.cpp  WidgetContainer.cpp  WidgetStyle.cpp  Window.cpp
